# grid2fp

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
grid2fp/: grid2fp.py
src/grid2fp/: grid2fp.py
test/: fig1_from_paper.csv  random.csv  test_integration.py  trefoil.csv  un.csv
