[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid2fp"
version = "0.0.1"
authors = [
  { name="Joe Starr", email="joe@joe-starr.com" },
]
description = "A tool to eat grid diagrams and generate its front projection."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Joecstarr/grid2fp"
"Bug Tracker" = "https://github.com/Joecstarr/grid2fp/issues"